# qc-bench

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
configs/: doublewell.yaml  ho.yaml  isw.yaml
notebooks/: 01_figures.ipynb  VQE_ControlGroup.ipynb  VQE_ExperimentalGroup.ipynb  build_hva_walkthrough.ipynb  run_qc_bench.ipynb
results/: runs.parquet
src/qcbench/: __init__.py  __main__.py  analytics.py  ansatz.py  backends.py  discretization.py  hamiltonian.py  metrics.py  potentials.py  runner.py  solvers.py
tests/: test_qcbench_unittest.py
