[metadata]
name = qcbench
version = 0.1.0
description = Benchmarking VQE ansatzes for 1D potentials
author = yunjaewon

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    scipy
    qiskit
    qiskit-aer
    qiskit-algorithms
    pandas
    pyarrow
    pyyaml
    matplotlib
    pylatexenc

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qc-bench = qcbench.runner:main
